# opengl-sdl2-c

./: .gitignore  README.md  compile_and_run.sh  main.cpp  meson.build
_old/: meson.build  smonky.c  triangles.c
src/: fragment.glsl  glinit.cpp  glinit.hpp  glprogram.cpp  loadshader.cpp  loadshader.hpp  logs.cpp  main.cpp  meson.build  vertex.glsl
src/headers/: glinit.hpp  glprogram.hpp  logs.hpp
